第一次修改，如下： 1、增加了一个activity  AppStart，并设置启动渐变效果。 2、修改了应用图标和应用名字  应用命名为 天天记账

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Keep Accounts Daily</string>
+    <string name="app_name">天天记账</string>
     <string name="action_settings">Settings</string>
 </resources>
